--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -333,7 +333,7 @@ $spreadsheet = new Spreadsheet();
  	\textit{Return}: Kelas \texttt{Worksheet}.
  	
  	\item \texttt{getActiveSheet()}\\
- 	 Mengembalikan kelas \textit{Worksheet} yang aktif.\\
+ 	Mengembalikan kelas \textit{Worksheet} yang telah dibuat menjadi \textit{sheet} aktif pada \texttt{setActiveSheetIndex}.\\
  	\textit{Parameter}: Tidak ada. \\ 
  	\textit{Return}: Kelas \texttt{Worksheet}.
  \end{itemize}
