--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -29,7 +29,7 @@ Pengerjaan untuk menganalisis \textit{bluetape} dilakukan dengan melakukan surve
 	5 & \makecell[l]{Mahasiswa dengan NPM baru \\ tidak dapat login dan lihat jadwal dosen} & \#5  & Akan diimplementasi & \ref{issue:5}\\ \hline
 	6 & \makecell[l]{Kolom pada entri jadwal dosen dan \\ lihat jadwal dosen tidak seragam}  & \#6 & Akan diimplementasi &\ref{issue:6} \\ \hline
 	7 & Fungsi Tab pada lihat jadwal dosen tidak berfungsi & \#7 & Akan diimplementasi & \ref{issue:7}\\ \hline
-	8 & \makecell[l]{Pengelompokkan rekap perubahan jadwal\\ pada mata kuliah yang sama} & \#8 & & \ref{issue:8}\\ \hline
+	8 & \makecell[l]{Pengelompokkan rekap perubahan jadwal\\ pada mata kuliah yang sama} & \#8 & Ditunda & \ref{issue:8}\\ \hline
 	9 & Menyediakan forum Q\&A pada \textit{bluetape} & \#9 & Tidak diimplementasi & \ref{issue:9}\\ \hline
 	10 & \textit{Scheduling} matakuliah pada googlemeet/zoom & \#10 & Tidak diimplementasi & \ref{issue:10} \\ \hline
 	11 & Mengubah atau membatalkan permohonan & \#11 & Akan diimplementasi & \ref{issue:11} \\ \hline
@@ -40,8 +40,8 @@ Pengerjaan untuk menganalisis \textit{bluetape} dilakukan dengan melakukan surve
 	16 & Pengajuan surat keterangan aktif kuliah secara online & \#16 & Tidak diimplementasi & \ref{issue:16} \\ \hline
 	17 & \makecell[l]{Notifikasi email untuk mahasiswa \\ jika permintaan sudah diselesaikan} & \#17 & Akan diimplementasi &  \ref{issue:17}\\ \hline
 	18 & Dapat melihat profil mahasiswa & \#18 & Tidak diimplementasi & \ref{issue:18}\\ \hline
-	19 & Halaman histori dan request transkrip terpisah & \#19 & & \ref{issue:19}\\ \hline
-	20 & Fitur bahasa indonesia dan inggris & \#20 & Tidak diimplementasi & \ref{issue:20} \\ \hline
+	19 & Halaman histori dan request transkrip terpisah & \#19 & Akan diimplementasi & \ref{issue:19}\\ \hline
+	20 & Fitur bahasa indonesia dan inggris &  \#20 & Tidak diimplementasi & \ref{issue:20} \\ \hline
 	21 & Pagination tidak terstyle dengan baik & \#22 & Akan diimplementasi & \ref{issue:22}\\ \hline
 	22 & Format Datetimepicker tidak konsisten &\#23 & Akan diimplementasi & \ref{issue:23}\\ \hline
 	
