--- a/doc/ProgressReport/document.tex
+++ b/doc/ProgressReport/document.tex
@@ -33,7 +33,7 @@
 %ISILAH DATA BERIKUT INI:
 \newcommand{\nama}{Stephen Hadi}
 \newcommand{\@npm}{2017730016}
-\newcommand{\tanggal}{10/01/2021} %Tanggal pembuatan dokumen
+\newcommand{\tanggal}{12/01/2021} %Tanggal pembuatan dokumen
 \newcommand{\@judultopik}{Analisa dan Implementasi Perbaikan Perangkat Lunak BlueTape} % Judul/topik anda
 \newcommand{\kodetopik}{PAN4901}
 \newcommand{\jumpemb}{1} % Jumlah pembimbing, 1 atau 2
@@ -74,7 +74,7 @@ Tipe Laporan : {\bf \tipePR} -
  Berkembangnya FTIS UNPAR disertai dengan tersedianya semakin banyak matakuliah, dari perkembangan tersebut muncul permasalahan baru di bagian bidang administrasi. Jika dosen ingin meniadakan perkuliahan atau mengganti perkuliahan akan tidak efisien jika melakukan panggilan atau \textit{email} ke pihak tata usaha. Hal tersebut akan memberatkan pihak tata usaha. Mahasiswa yang ingin melakukan pengajuan transkrip akan membuang waktu dan tenaga, karena saat mahasiswa ingin melakukan pengajuan transkrip maka mahasiswa harus datang ke tata usaha melakukan pengajuan dan menunggu beberapa hari untuk mendapatkan hasil transkrip tersebut. Mahasiswa yang tidak memiliki perkuliahan pada hari tersebut harus datang hanya untuk melakukan pengajuan. Hal ini selain membuang waktu juga membuang biaya transportasi.
 
 
-\textit{Bluetape}\footnote{\label{ft:bluetape}\url{https://github.com/ftisunpar/BlueTape}} adalah aplikasi web yang dibuat oleh dosen dan mahasiswa informatika. Aplikasi ini dibuat menggunakan \textit{Hypertext Preprocessor} atau lebih dikenal dengan \textit{PHP}\footnote{\url{https://www.php.net/}}. \textit{Database management system} atau DBMS yang digunakan adalah \textit{MYSQL}\footnote{\url{https://www.mysql.com/}}.\textit{ Bluetape} menggunakan \textit{framework Bootstrap}\footnote{\url{https://getbootstrap.com/}} dan \textit{Codeigniter}\footnote{\url{https://codeigniter.com/}}. \textit{Bluetape} berguna untuk membantu kegiatan administrasi FTIS UNPAR. Aplikasi ini dapat melakukan \textit{transkrip request/manage} dan \textit{request perubahan kuliah/manage}. Sehingga jika dosen ingin meniadakan/mengganti perkuliahan dapat dilakukan dengan mudah tanpa harus membuat email ataupun melakukan panggilan. Mahasiswa dapat melakukan permintaan transkrip nilai tanpa tatap muka sehingga mahasiswa hanya perlu datang ke UNPAR saat ingin mengambil hasil dari transkrip tersebut, selain itu mahasiswa juga dapat melihat jadwal dosen. Dengan adanya sistem otomasi pada kegiatan administrasi tentunya pekerjaan tata usaha menjadi lebih ringan. 
+\textit{Bluetape} adalah aplikasi web yang dibuat oleh dosen dan mahasiswa informatika. Aplikasi ini dibuat menggunakan \textit{Hypertext Preprocessor} atau lebih dikenal dengan \textit{PHP}. \textit{Database management system} atau DBMS yang digunakan adalah \textit{MYSQL}.\textit{ Bluetape} menggunakan \textit{framework Bootstrap} dan \textit{Codeigniter}. \textit{Bluetape} berguna untuk membantu kegiatan administrasi FTIS UNPAR. Aplikasi ini dapat melakukan \textit{transkrip request/manage} dan \textit{request perubahan kuliah/manage}. Sehingga jika dosen ingin meniadakan/mengganti perkuliahan dapat dilakukan dengan mudah tanpa harus membuat email ataupun melakukan panggilan. Mahasiswa dapat melakukan permintaan transkrip nilai tanpa tatap muka sehingga mahasiswa hanya perlu datang ke UNPAR saat ingin mengambil hasil dari transkrip tersebut, selain itu mahasiswa juga dapat melihat jadwal dosen. Dengan adanya sistem otomasi pada kegiatan administrasi tentunya pekerjaan tata usaha menjadi lebih ringan. 
 
 
 Aplikasi \textit{Bluetape} digunakan oleh mahasiswa FTIS, dosen ,dan tata usaha. Dari pengguna--pengguna tersebut tentu akan ada hal yang disukai dan hal yang tidak disukai. Seperti ada fitur yang bermasalah, ada fitur yang kurang atau hanya saran untuk fitur kedepannya yang akan memudahkan kegiatan administrasi dalam FTIS UNPAR. Dengan adanya masukan--masukan dari pengguna maka aplikasi \textit{Bluetape} dapat ditingkatkan penggunaannya dan memperbaiki kelemahan dari \textit{Bluetape}.
@@ -113,7 +113,7 @@ Detail bagian pekerjaan skripsi sesuai dengan rencan kerja/laporan perkembangan 
 	{\bf Hasil :} Cara kerja \textit{code igniter}, \textit{bootstrap}, dan \textit{phpspreadsheet} telah dipelajari, Hasil dari studi secara garis besar:
 	\begin{enumerate}
 		\item \textbf{Code Igniter} \\
-		\textit{CodeIgniter}\footnote{\url{https://codeigniter.com/userguide3/overview/index.html}} adalah \textit{framework} untuk pembuatan \textit{website} yang menggunakan \textit{PHP}. \textit{CodeIgniter} mempermudah \textit{developer} untuk meminimalisir penggunaan kode untuk mengakses suatu fungsi.
+		\textit{CodeIgniter}\footnote{Version 3.1.11 (2019) \textit{CodeIgniter 3}. British Columbia Institute of Technology. 3700 Willingdon Ave} adalah \textit{framework} untuk pembuatan \textit{website} yang menggunakan \textit{PHP}. \textit{CodeIgniter} mempermudah \textit{developer} untuk meminimalisir penggunaan kode untuk mengakses suatu fungsi.
 		
 		\begin{figure}[H]
 			\centering
@@ -138,69 +138,98 @@ Detail bagian pekerjaan skripsi sesuai dengan rencan kerja/laporan perkembangan 
 			\textit{CI\_Loader} adalah kelas yang berfungsi untuk \textit{load elements}. \textit{Elements} dapat berupa \textit{libraries, view files, drivers, helpers, models}. Kelas ini sudah diinisialisasi secara otomatis oleh \textit{code igniter}.
 			
 			\item \textbf{CI\_Config} \\
-			\textit{CI\_Config} adalah kelas yang digunakan untuk mengambil konfigurasi yang dibuat. \textit{Method} yang digunakan: \texttt{item}.
+			\textit{CI\_Config} adalah kelas yang digunakan untuk mengambil konfigurasi yang dibuat. \textit{Method} yang digunakan: \texttt{item}. \textit{Method} \textit{item} digunakan untuk mengambil variabel \texttt{\$config}.
 			
 			\item \textbf{CI\_Email} \\
 			\textit{CI\_Email} adalah kelas yang berfungsi untuk mempermudah pengiriman \textit{email} yang disediakan oleh \textit{codeigniter}. Kelas ini memiliki \textit{method}: 
 			\begin{itemize}
-				\item \texttt{from}
-				\item \texttt{to}
-				\item \texttt{subject}
-				\item \texttt{message}
-				\item \texttt{send}
+				\item \texttt{from} \\
+				\textit{Method} ini digunakan untuk memasang alamat \textit{e-mail} pengirim dan nama pengirim.
+				\item \texttt{to} \\
+				\textit{Method} ini digunakan untuk menentukan tujuan.
+				\item \texttt{subject} \\
+				\textit{Method} ini digunakan untuk memasang subjek pesan.
+				\item \texttt{message} \\
+				\textit{Method} ini digunakan untuk memasang pesan yang ingin dikirim
+				\item \texttt{send} \\
+				\textit{Method} ini digunakan untuk mengirim pesan.
 			\end{itemize}
 		\item \textbf{CI\_Input} \\ 
 		\textit{CI\_Input} adalah kelas yang digunakan untuk menyaring dan membersihkan data masukan untuk meningkatkan keamanan. \textit{Method} yang digunakan:
 		\begin{itemize}
-			\item \texttt{post}
-			\item \texttt{server}
+			\item \texttt{post} \\
+			\textit{Method} ini berfungsi membaca masukan dengan tipe \textit{post}.
+			\item \texttt{server} \\
+			\textit{Method} ini berguna untuk mengambil \textit{server data} seperti \texttt{\$\_SERVER}.
 		\end{itemize}
 		\item \textbf{CI\_Session} \\
 		\textit{Session} digunakan untuk mengurus  \textit{user's state} dan melihat aktivitas \textit{user} saat menelusuri situs. Kelas ini sama seperti \texttt{\$\_SESSION} \textit{superglobal}. \textit{Method} yang digunakan:
 		\begin{itemize}
-			\item \texttt{set\_flashdata}
-			\item \texttt{flashdata}
-			\item \texttt{set\_userdata}
-			\item \texttt{userdata}
-			\item \texttt{unset\_userdata}
+			\item \texttt{set\_flashdata} \\
+			\textit{Method} ini berguna untuk menyimpan data ke \texttt{\$\_SESSION} \textit{superglobal} dan menandai sebagai \textit{flashdata}. \textit{Flashdata} adalah \textit{session data} yang hanya tersedia untuk permintaan berikutnya dan setelah itu akan dibuang.
+			
+			\item \texttt{flashdata} \\
+			 \textit{Method} ini mengambil nilai dari spesifik \texttt{\$\_SESSION} yang telah ditandai sebagai \textit{flashdata}.
+			 
+			\item \texttt{set\_userdata} \\
+			\textit{Method} ini berguna untuk menyimpan data ke \texttt{\$\_SESSION} \textit{superglobal}.
+			
+			\item \texttt{userdata} \\
+			\textit{Method} ini berguna untuk mengambil \textit{value} untuk \texttt{\$\_SESSION} \textit{item} atau \textit{array} semua data user
+			
+			\item \texttt{unset\_userdata} \\
+			\textit{Method} ini berfungsi untuk membuang data dari \texttt{\$\_SESSION} \textit{superglobal} dengan \textit{key} masukan.
 		\end{itemize}	
 		\end{itemize}
 	
 	\item \textbf{Phpspreadsheet} \\
-	PhpSpreadsheet adalah \textit{library} yang ditulis dengan bahasa PHP berguna untuk membaca dan menulis file dengan jenis spreadsheet seperti Excel dan LibreOffice Calc\footnote{\url{https://phpspreadsheet.readthedocs.io/en/latest/}}. Kelas pada \textit{phpspreadsheet}:
+	PhpSpreadsheet adalah \textit{library} yang ditulis dengan bahasa PHP berguna untuk membaca dan menulis file dengan jenis spreadsheet seperti Excel dan LibreOffice Calc\footnote{Version 1.14.1 (2019) \textit{PhpSpreadsheet}. PHPOffice. The Internet.}. Kelas pada \textit{phpspreadsheet}:
 	\begin{itemize}		 
 		\item \textbf{Spreadsheet} \\ 
 		\textit{Constructor} kelas \textit{Spreadsheet} tidak menerima parameter apapun, dan \textit{return value} adalah \textit{mixed}. \textit{Method} yang digunakan pada kelas \texttt{Spreadsheet}:
 		\begin{itemize}
-			\item \texttt{createSheet}
-			\item \texttt{setActiveSheetIndex}
-			\item \texttt{getActiveSheet}
+			\item \texttt{createSheet} \\
+			\textit{Method} ini berfungsi untuk membuat \textit{sheet}.
+			\item \texttt{setActiveSheetIndex} \\
+			Memilih \textit{sheet} yang ingin dijadikan \textit{active} berdasarkan \textit{index}.
+			\item \texttt{getActiveSheet} \\
+			Mengembalikan kelas \textit{Worksheet} yang telah dibuat menjadi \textit{sheet} aktif pada \texttt{setActiveSheetIndex}.
 		\end{itemize}
 	
 		\item \textbf{Worksheet} \\
 		Kelas \textit{Worksheet} adalah kelas yang mengatur nilai dari \textit{cell}, \textit{cell style}, judul \textit{sheet} dll. \textit{Method} yang digunakan pada kelas \texttt{Worksheet}:
 		\begin{itemize}
-			\item \texttt{getStyle}
-			\item \texttt{setCellValue}
-			\item \texttt{mergeCells}
-			\item \texttt{getRowDimension}
-			\item \texttt{getColumnDimension}
+			\item \texttt{getStyle} \\
+			Mengembalikan kelas \texttt{Style}.
+			\item \texttt{setCellValue} \\
+			mengubah suatu nilai pada \textit{cell} tertentu.
+			\item \texttt{mergeCells} \\
+			Melakukan \textit{merge} pada \textit{cell}.
+			\item \texttt{setTitle} \\
+			Berfungsi untuk memberi judul pada \textit{sheet}.
+			\item \texttt{getRowDimension} \\
+			Mengambil dimensi baris pada baris tertentu.
+			\item \texttt{getColumnDimension}\\ 	
+			Mengambil dimensi kolom pada kolom tertentu.
 		\end{itemize}
 	
 	\item \textbf{Style} \\
 	Kelas \textit{Style} adalah kelas yang mengatur \textit{style} dari suatu \textit{cell} seperti \textit{alignment}, \textit{fill},\textit{font} dll. \textit{Method} yang tersedia pada kelas \texttt{Style}:
 	\begin{itemize}
-		\item \texttt{getFill}
-		\item \texttt{getAlignment}
-		\item \texttt{getFont}
+		\item \texttt{getFill} \\
+		Mengembalikan kelas \textit{Fill}. untuk mengubah \textit{fill} pada suatu \textit{cell} dapat memanggil \texttt{set\-Fill\-Type()} pada kelas \textit{Fill}.
+		\item \texttt{getAlignment} \\
+		Mengembalikan kelas \textit{Alignment}, untuk mengubah \textit{alignment} pada suatu \textit{cell} dapat memanggil \texttt{setHorizontal()} atau \texttt{setVertical()} pada kelas \textit{Alignment}.
+		\item \texttt{getFont} \\
+		 Mengembalikan kelas \textit{Font}, untuk mengubah penebalan kata dapat menggunakan \texttt{setBold()} dengan masukan \textit{boolean}.
 	\end{itemize}
 
 	\item \textbf{Xls} \\
-	Kelas \texttt{Xls} memiliki 2 tipe yaitu \textit{writer} dan \textit{reader}. Pada penelitian kali ini tipe \textit{Xls} yang digunakan hanya tipe \textit{writer}. \textit{Method} yang digunakan dari kelas \texttt{Xls}: \texttt{save}. 
+	Kelas \texttt{Xls} memiliki 2 tipe yaitu \textit{writer} dan \textit{reader}. Pada penelitian kali ini tipe \textit{Xls} yang digunakan hanya tipe \textit{writer}. \textit{Method} yang digunakan dari kelas \texttt{Xls}: \texttt{save}. \textit{Method} ini berfungsi untuk membuat file \textit{spreadsheet} tersimpan dalam format \textit{xls}.
 	\end{itemize}
 
 	\item \textbf{Bootstrap} \\
-	\textit{Bootstrap} adalah \textit{framework} paling terkenal untuk membuat \textit{site} yang \textit{mobile-first} dan \textit{res\-pon\-sive}\footnote{\url{https://getbootstrap.com/docs/4.0/getting-started/introduction/}}. Komponen-komponen \textit{bootstrap}:
+	\textit{Bootstrap} adalah \textit{framework} paling terkenal untuk membuat \textit{site} yang \textit{mobile-first} dan \textit{res\-pon\-sive}\footnote{Version 4.5 (2020) Bootstrap. Bootstrap. San Francisco, United States.}. Komponen-komponen \textit{bootstrap}:
 	\begin{itemize}
 		\item \textit{Container} \\
 		Kelas \texttt{container} adalah kelas yang dibutuhkan jika ingin menggunakan \textit{bootstrap} grid. Kelas \texttt{container} adalah kelas \textit{responsive} dan \textit{fixed-width}.
@@ -209,10 +238,10 @@ Detail bagian pekerjaan skripsi sesuai dengan rencan kerja/laporan perkembangan 
 		\textit{Grid} pada \textit{bootstrap} digunakan untuk mengatur \textit{layout} dan \textit{alignment}. \textit{Row} adalah kelas \textit{wrapper} untuk kolom. Kelas \textit{col} akan secara otomatis membagi lebar horizontal dari layout menjadi sama besar.
 		
 		\item \textit{Table} \\
-		Kelas \texttt{table} adalah kelas yang membantu pembuatan \textit{table}.
+		Kelas \texttt{table} adalah kelas yang membantu pembuatan \textit{table}. Dengan komponen pendukung yang dapat membuat \textit{table} memiliki \textit{border} ataupun \textit{table} dengan \textit{style striped}.
 		
 		\item \textit{Pagination} \\
-		\textit{Pagination} dibuat menggunakan \texttt{HTML list} yang berada didalam \texttt{<nav>} untuk mengidentifikasikan \textit{pagination} sebagai bagian navigasi kepada pengguna.
+		\textit{Pagination} dibuat menggunakan \texttt{HTML list} yang berada didalam \texttt{<nav>} untuk mengidentifikasikan \textit{pagination} sebagai bagian navigasi kepada pengguna. \textit{Pagination} juga menyediakan komponen pendukung seperti menandai \textit{pagination} yang aktif, membuat \textit{link} tidak dapat di klik.
 
 		\item \textit{Modal} \\
 		\textit{Modal} dibuat dengan \textit{html, css, javascript}. \textit{Modal} akan mengubah \textit{scroll} pada \texttt{<body>} sehingga sasaran \textit{scroll} hanya pada \textit{modal}. \textit{Modal} akan tertutup jika pengguna mengklik diluar modal.
@@ -240,7 +269,7 @@ Detail bagian pekerjaan skripsi sesuai dengan rencan kerja/laporan perkembangan 
 		\label{fig:analisis} 
 	\end{figure}
 	
-	Masukan yang akan diimplementasi adalah:
+	\textbf{Masukan yang akan diimplementasi adalah:}
 	\begin{enumerate}
 		\item Fitur "Expor ke XLS" pada menu  entri jadwal dosen  menghasilkan file \textit{corrupt}		
 		\item \textit{Update google api / phpspreadsheet}		
@@ -257,6 +286,10 @@ Detail bagian pekerjaan skripsi sesuai dengan rencan kerja/laporan perkembangan 
 		\item Format Datetimepicker tidak konsisten
 	\end{enumerate}
 
+	\textbf{Masukan yang ditunda adalah:} \\
+	Pengelompokkan rekap perubahan jadwal pada mata kuliah yang sama. \\
+	 Masukan ini ditunda dan tidak akan dikerjakan kecuali jika ada waktu sebelum \textit{deadline} Skripsi 2.
+
 	\item \textbf{Merancang dan mengimplementasi hasil survei}\\
 	{\bf Status :} Ada sejak rencana kerja skripsi.\\
 	{\bf Hasil :} Hasil survei yang telah dianalisis akan dikerjakan telah diimplementasi dengan mengikuti aturan yang telah ditetapkan bersama pembimbing. Hasil implementasi lengkap dapat dilihat pada \url{https://github.com/stephenhadi/BlueTape/pulls}.	
@@ -272,9 +305,9 @@ Detail bagian pekerjaan skripsi sesuai dengan rencan kerja/laporan perkembangan 
 		
 		\item \textit{Update google api / phpspreadsheet}. Update telah dilakukan dengan merubah \texttt{composer.json}.
 				
-		\item  Fitur \textit{chart} pada manajemen cetak transkrip. Fitur ini sedang tahap perbaikan dikarenakan kesalahan mengerti maksud \textit{feedback}.		
+		\item  Fitur \textit{chart} pada manajemen cetak transkrip. Fitur ini sedang tahap perbaikan dikarenakan kesalahan mengerti maksud dari pengguna.		
 		
-		\item Fitur \textit{chart} pada manajemen perubahan kuliah. Fitur ini sedang tahap perbaikan dikarenakan kesalahan mengerti maksud \textit{feedback}.	
+		\item Fitur \textit{chart} pada manajemen perubahan kuliah. Fitur ini sedang tahap perbaikan dikarenakan kesalahan mengerti maksud dari pengguna.	
 		
 		\item Mahasiswa dengan NPM baru tidak dapat login dan lihat jadwal dosen. Mahasiswa dengan NPM format baru dapat melihat halaman lihat jadwal dosen. Lihat gambar \ref{fig:lihatjadwaldosen}.		
 		\begin{figure}[H]
@@ -284,21 +317,19 @@ Detail bagian pekerjaan skripsi sesuai dengan rencan kerja/laporan perkembangan 
 			\label{fig:lihatjadwaldosen} 
 		\end{figure}
 				
-		\item Kolom pada entri jadwal dosen dan lihat jadwal dosen tidak seragam. Masukan ini telah diperbaiki, Kolom senin sampai jumat memiliki lebar yang seragam seperti pada gambar \ref{fig:lihatjadwaldosen}.
-		
+		\item Kolom pada entri jadwal dosen dan lihat jadwal dosen tidak seragam. Masukan ini telah diperbaiki, Kolom senin sampai jumat memiliki lebar yang seragam seperti pada gambar \ref{fig:lihatjadwaldosen}.		
 		\item Fungsi Tab pada lihat jadwal dosen tidak berfungsi. Fungsi ini telah diperbaiki dan berjalan seperti pada gambar \ref{fig:lihatjadwaldosen}. Tabel lihat jadwal dosen memiliki navigasi \textit{bootstrap} dengan jenis \textit{tab}.
-	
 		\item Mengubah atau membatalkan permohonan. Masukan ini adalah masukan dari dosen dan mahasiswa, sehingga dibuat pada halaman cetak transkrip pada gambar \ref{fig:cetaktranskripcancel} dan pada halaman perubahan kuliah pada gambar \ref{fig:perubahankuliahcancel}.
 		\begin{figure}[H]
 			\centering
-			\includegraphics[scale=0.6]{cetaktranskripcancel} 
+			\includegraphics[scale=0.5]{cetaktranskripcancel} 
 			\caption{Fitur \textit{edit} dan \textit{delete} pada halaman cetak transkrip.}
 			\label{fig:cetaktranskripcancel} 
 		\end{figure}
 	
 		\begin{figure}[H]
 			\centering
-			\includegraphics[scale=0.6]{perubahankuliahcancel} 
+			\includegraphics[scale=0.5]{perubahankuliahcancel} 
 			\caption{Fitur \textit{edit} dan \textit{delete} pada perubahan kuliah.}
 			\label{fig:perubahankuliahcancel} 
 		\end{figure}
@@ -365,7 +396,6 @@ Kendala - kendala yang dihadapi selama mengerjakan skripsi:
 \begin{itemize}
 	\item Tugas mata kuliah lain yang banyak
 	\item Mudah bosan
-	\item Umur muda badan terasa tua(badan selalu lelah)
 \end{itemize}
 
 \newpage
