--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -13,7 +13,7 @@
 
 \chapter{Analisis}
 \section{Analisis Program Usulan \textit{Bluetape}}
-Pengerjaan untuk menganalisis \textit{bluetape} dilakukan dengan melakukan survei dengan pengguna--pengguna aplikasi tersebut. Survei dilakukan melalui \textit{google form} dan \textit{link} dari survei tersebut dibagikan melalui \textit{mailing list} dosen dan grup informatika UNPAR angkatan 2017. Pertanyaan pada survei tersebut cukup singkat. Pertanyaan hanya menanyakan nama dan tipe pengguna \textit{bluetape} dan disediakan suatu text field untuk memasukkan \textit{feedback} dari pengguna. Adapun \textit{feedback} yang telah terkumpulkan tersedia pada tabel \ref{tab:analisis pengguna}.
+Pengerjaan untuk menganalisis \textit{bluetape} dilakukan dengan melakukan survei dengan pengguna--pengguna aplikasi tersebut. Survei dilakukan melalui \textit{google form} dan \textit{link} dari survei tersebut dibagikan melalui \textit{mailing list} dosen dan grup informatika UNPAR angkatan 2017. Pertanyaan pada survei tersebut cukup singkat. Pertanyaan hanya menanyakan nama dan tipe pengguna \textit{bluetape} dan disediakan suatu kolom  untuk memasukkan kebutuhan dari pengguna. Adapun kebutuhan pengguna yang telah terkumpulkan tersedia pada tabel \ref{tab:analisis pengguna}.
 
 \begin{table}[H]
 	\centering
@@ -29,21 +29,22 @@ Pengerjaan untuk menganalisis \textit{bluetape} dilakukan dengan melakukan surve
 	5 & \makecell[l]{Mahasiswa dengan NPM baru \\ tidak dapat login dan lihat jadwal dosen} & \#5  & Akan diimplementasi & \ref{issue:5}\\ \hline
 	6 & \makecell[l]{Kolom pada entri jadwal dosen dan \\ lihat jadwal dosen tidak seragam}  & \#6 & Akan diimplementasi &\ref{issue:6} \\ \hline
 	7 & Fungsi Tab pada lihat jadwal dosen tidak berfungsi & \#7 & Akan diimplementasi & \ref{issue:7}\\ \hline
-	8 & \makecell[l]{Pengelompokkan rekap perubahan jadwal\\ pada mata kuliah yang sama} & \#8 & Ditunda & \ref{issue:8}\\ \hline
-	9 & Menyediakan forum Q\&A pada \textit{bluetape} & \#9 & Tidak diimplementasi & \ref{issue:9}\\ \hline
-	10 & \textit{Scheduling} matakuliah pada googlemeet/zoom & \#10 & Tidak diimplementasi & \ref{issue:10} \\ \hline
-	11 & Mengubah atau membatalkan permohonan & \#11 & Akan diimplementasi & \ref{issue:11} \\ \hline
-	12 & Menambahkan jam kuliah selesai di perubahan kelas & \#12 & Akan diimplementasi & \ref{issue:12} \\ \hline
-	13 & Memperbaiki form dan link yang tidak aktif & \#13 & Tidak diimplementasi & \ref{issue:13}\\ \hline
-	14 & Mengintegrasi \textit{bluetape} dengan SSO UNPAR & \#14 & Tidak diimplementasi & \ref{issue:14}\\ \hline
-	15 & Menambah list permintaan pada \textit{bluetape} & \#15 & Tidak diimplementasi & \ref{issue:15} \\ \hline
-	16 & Pengajuan surat keterangan aktif kuliah secara online & \#16 & Tidak diimplementasi & \ref{issue:16} \\ \hline
-	17 & \makecell[l]{Notifikasi email untuk mahasiswa \\ jika permintaan sudah diselesaikan} & \#17 & Akan diimplementasi &  \ref{issue:17}\\ \hline
-	18 & Dapat melihat profil mahasiswa & \#18 & Tidak diimplementasi & \ref{issue:18}\\ \hline
-	19 & Halaman histori dan request transkrip terpisah & \#19 & Akan diimplementasi & \ref{issue:19}\\ \hline
-	20 & Fitur bahasa indonesia dan inggris &  \#20 & Tidak diimplementasi & \ref{issue:20} \\ \hline
-	21 & Pagination tidak terstyle dengan baik & \#22 & Akan diimplementasi & \ref{issue:22}\\ \hline
-	22 & Format Datetimepicker tidak konsisten &\#23 & Akan diimplementasi & \ref{issue:23}\\ \hline
+	8 & Menambahkan jam kuliah selesai di perubahan kelas & \#12 & Akan diimplementasi & \ref{issue:12} \\ \hline
+	9 & \makecell[l]{Notifikasi email untuk mahasiswa \\ jika permintaan sudah diselesaikan} & \#17 & Akan diimplementasi &  \ref{issue:17}\\ \hline
+	10 & Pagination tidak terstyle dengan baik & \#22 & Akan diimplementasi & \ref{issue:22}\\ \hline
+	11 & Format Datetimepicker tidak konsisten &\#23 & Akan diimplementasi & \ref{issue:23}\\ \hline
+	12 & Mengubah atau membatalkan permohonan & \#11 & Akan diimplementasi & \ref{issue:11} \\ \hline
+	13 & Halaman histori dan request transkrip terpisah & \#19 & Akan diimplementasi & \ref{issue:19}\\ \hline
+	14 & Menyediakan forum Q\&A pada \textit{bluetape} & \#9 & Tidak diimplementasi & \ref{issue:9}\\ \hline
+	15 & \textit{Scheduling} matakuliah pada googlemeet/zoom & \#10 & Tidak diimplementasi & \ref{issue:10} \\ \hline
+	16 & Memperbaiki form dan link yang tidak aktif & \#13 & Tidak diimplementasi & \ref{issue:13}\\ \hline
+	17 & \makecell[l]{Pengelompokkan rekap perubahan jadwal\\ pada mata kuliah yang sama} & \#8 & Ditunda & \ref{issue:8}\\ \hline
+	18 & Mengintegrasi \textit{bluetape} dengan SSO UNPAR & \#14 & Tidak diimplementasi & \ref{issue:14}\\ \hline
+	19 & Menambah list permintaan pada \textit{bluetape} & \#15 & Tidak diimplementasi & \ref{issue:15} \\ \hline
+	20 & Pengajuan surat keterangan aktif kuliah secara online & \#16 & Tidak diimplementasi & \ref{issue:16} \\ \hline
+	21 & Dapat melihat profil mahasiswa & \#18 & Tidak diimplementasi & \ref{issue:18}\\ \hline
+	22 & Fitur bahasa indonesia dan inggris &  \#20 & Tidak diimplementasi & \ref{issue:20} \\ \hline
+
 	
 	
 	\end{tabular}}
@@ -82,13 +83,13 @@ Fitur ini akan dikerjakan dan solusi yang ditawarkan untuk \textit{issue} ini ad
 Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/2}. 
 \subsection{Fitur \textit{chart} pada Manajemen Cetak Transkrip}
 \label{issue:3}
-Pada halaman \texttt{ManajemenCetakTranskrip} terdapat \textit{feedback} untuk mengimplementasi sebuah \textit{chart} untuk melihat perbandingan transkrip yang tercetak dan ditolak. \textit{Issue} ini juga meminta agar dapat dibagi berdasarkan tahun, rekap per hari dalam minggu, rekap per jam.
+Pada halaman \texttt{ManajemenCetakTranskrip} terdapat masukan dari pengurus \textit{bluetape} untuk mengimplementasi sebuah \textit{chart} untuk melihat perbandingan transkrip yang tercetak dan ditolak. \textit{Issue} ini juga meminta agar dapat dibagi berdasarkan tahun, rekap per hari dalam minggu, rekap per jam.
 
 Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan menggunakan \textit{library} \textit{chart.js}\footnote{\label{ft:chartjs}\url{https://www.chartjs.org/}}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/3}.
 
 \subsection{Fitur \textit{chart} pada Manajemen Perubahan Kuliah}
 \label{issue:4}
-Pada halaman \texttt{ManajemenPerubahanKuliah} terdapat \textit{feedback} untuk mengimplementasi sebuah \textit{chart} untuk melihat perbandingan jenis perubahan kuliah yaitu: diganti, ditadakan, dan tambahan. \textit{Issue} ini juga meminta agar dibagi berdasarkan tahun, rekap per hari dalam minggu, rekap per jam.
+Pada halaman \texttt{ManajemenPerubahanKuliah} terdapat masukan dari pengurus \textit{bluetape} untuk mengimplementasi sebuah \textit{chart} untuk melihat perbandingan jenis perubahan kuliah yaitu: diganti, ditadakan, dan tambahan. \textit{Issue} ini juga meminta agar dibagi berdasarkan tahun, rekap per hari dalam minggu, rekap per jam.
 
 Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan menggunakan \textit{library} \textit{chart.js}\textsuperscript{\ref{ft:chartjs}}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/4}.
 
@@ -118,85 +119,18 @@ Fitur ini akan diimplementasi. Solusi yang ditawarkan adalah dengan memasang \te
 
 Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan mengubah struktur \textit{nav-tab} sesuai struktur yang diberikan oleh \textit{bootstrap}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/7}.
 
-\subsection{Pengelompokkan Rekap Perubahan Jadwal pada Mata Kuliah yang Sama}
-\label{issue:8}
-\subsection{Menyediakan Forum Q\&A pada \textit{Bluetape}}
-\label{issue:9}
-Masukan pengguna meminta \textit{bluetape} menyediakan tempat forum untuk bertanya antar mahasiswa dan pihak tata usaha. \textit{Feedback} dari pengguna: ``Pada masa daring saat ini ketika semua informasi disampaikan melalui media digital, mahasiswa banyak kontak via email dan akhirnya menumpuk''.  Pengguna meminta untuk dibuat portal kecil untuk \textit{Q}\&\textit{A} dalam ranah akademik.
-
-Masukan ini tidak akan diimplementasi pada skripsi ini, karena untuk forum sebaiknya menggunakan aplikasi pihak ketiga yang sudah matang dibanding membuat dari nol. Seperti: \textit{Microsoft Teams}\footnote{\url{https://www.microsoft.com/microsoft-365/microsoft-teams}},\textit{Slack}\footnote{\url{https://slack.com}} atau \textit{monday.com}\footnote{\url{https://monday.com/}}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/9}. 
-
-\subsection{\textit{Scheduling} Matakuliah pada \textit{googlemeet/zoom}}
-\label{issue:10}
-\textit{Issue} ini meminta agar \textit{bluetape} melakukan \textit{auto include} jadwal kuliah ke calendar, lalu {autocreate} jadwal kuliah berdasarkan jadwal tersebut di \textit{zoom/meet} selama 1 semester, dan \textit{Request} jadwal bertemu dari mahasiswa kepada dosen pembimbing, kemudian \textit{auto schedule zoom/meet}.
-
-Fitur ini tidak akan diimplementasi pada skripsi ini, karena permintaan tersebut masuk ke dalam ranah Biro Teknologi Informasi (BTI) dan saat ini \textit{bluetape} tidak memiliki kemampuan untuk integrasi jadwal kuliah dari BTI. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/10}. 
-
-\subsection{Mengubah atau Membatalkan Permohonan}
-\label{issue:11}
-Pada halaman cetak transkrip dan halaman  perubahan kuliah pengguna dapat mengajukan permohonan. Salah satu mahasiswa dan dosen menyampaikan \textit{feedback} yaitu:
-\begin{itemize}
-	\item Mahasiswa dapat mengubah atau membatalkan permohonan transkrip. 
-	\item Dosen dapat mengubah atau membatalkan permohonan perubahan kuliah.
-\end{itemize}
-Karena fitur ini mirip maka dijadikan menjadi satu \textit{issue}. 
-
-Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan menggunakan \texttt{modal} dari \textit{bootstrap} dan menambahkan \textit{method} pada \textit{controller} untuk mengubah dan menghapus dengan syarat bahwa permohonan tersebut belum dijawab. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/11}.
-
 \subsection{Menambahkan Jam Kuliah Selesai di Perubahan Kelas}
 \label{issue:12}
-Pengguna menyampaikan \textit{feedback} agar pada halaman perubahan kuliah, dosen dapat menambahkan opsi jam selesai dari kuliah.
+Pengguna menyampaikan masukan agar pada halaman perubahan kuliah, dosen dapat menambahkan opsi jam selesai dari kuliah.
 
-\textit{Feedback} ini akan diimplementasi dan solusi yang ditawarkan adalah dengan menambah satu kolom \textit{text input} untuk menerima jam selesai dalam format \texttt{hh:mm} dan kolom tersebut bersifat opsional untuk diisi oleh dosen. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/12}.
-
-\subsection{Memperbaiki \textit{Form} dan \textit{Link} yang Tidak Aktif}
-\label{issue:13}
-Masukan ini meminta perbaikan terhadap fitur yang ada: 
-\begin{itemize}
-	\item \textit{form} atau link seperti no surat, daftar ruang, dan peraturan terus diupdate.
-	\item Dibuat lebih sistematis karena tampilannya tidak seragam.
-	\item Dibuat lebih interaktif seperti peminjaman ruang.
-\end{itemize}   
-
-Masukan ini tidak akan diimplementasi, karena sepertinya fitur tersebut di luar sistem \textit{bluetape}. Seperti no surat, daftar ruang, dan peraturan tidak terdapat pada \textit{bluetape}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/13}. 
-
-\subsection{Mengintegrasi \textit{Bluetape} dengan SSO UNPAR}
-\label{issue:14}
-Masukan ini meminta fitur tambahan agar \textit{bluetape} terintegrasi secara penuh dengan \textit{studentportal}\footnote{\url{https://studentportal.unpar.ac.id/}}. Sehingga \textit{bluetape} dapat diakses lewat \textit{studentportal} dan \textit{bluetape} dapat \textit{login} menggunakan SSO.
-
-Fitur masukan ini tidak akan diimplementasi karena diperlukan koordinasi yang kuat dengan BTI dan \textit{Bluetape} untuk sekarang ini tidak diperuntukan untuk pengguna diluar FTIS. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/14}. 
-
-\subsection{Menambah \textit{List} Permintaan pada \textit{Bluetape}}
-\label{issue:15}
-Masukan ini meminta agar \textit{bluetape} menambah \textit{list} permintaan. Masukan ini tidak dikerjakan karena pengguna tersebut kurang spesifik dalam menjelaskan kebutuhannya. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/15}. 
-
-\subsection{Pengajuan Surat Keterangan Aktif Kuliah Secara Online}
-\label{issue:16}
-Fitur tambahan ini meminta agar \textit{bluetape} dapat melayani pengajuan surat keterangan aktif kuliah. Karena untuk mendapatkan surat keterangan aktif kuliah masih dilakukan secara manual.
-
-Fitur ini tidak akan diimplementasi pada skripsi ini dikarenakan waktu yang terbatas, fitur yang cukup banyak, dan juga harus koordinasi intensif dengan tata usaha dan kepala sub bagian kemahasiswaan. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/16}.
+Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan menambah satu kolom untuk memasukkan jam selesai pada halaman \texttt{PerubahanKuliah}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/12}
 
 \subsection{Notifikasi E-mail Terhadap Mahasiswa saat Permintaan Selesai}
 \label{issue:17}
-Fitur tambahan ini meminta saat proses pengajuan telah dijawab atau ditolak oleh tata usaha, maka mahasiswa mendapatkan notifikasi e-mail.
+Fitur tambahan ini diajukan oleh seorang mahasiswa agar saat proses pengajuan telah disetujui atau ditolak oleh tata usaha, maka mahasiswa mendapatkan notifikasi e-mail.
 
-Fitur ini tidak diimplementasi karena \textit{bluetape} telah memiliki fitur ini. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/17}.
- 
+Fitur ini akan diimplementasi. Tetapi setelah ditelusuri fitur ini telah tersedia pada \textit{bluetape}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/17}
 
-\subsection{Dapat Melihat Profil Mahasiswa}
-
-\label{issue:18}
-Salah satu masukan dari \textit{bluetape} adalah menginginkan seorang mahasiswa dapat melihat profil mahasiswa lain.
-
-Fitur ini tidak diimplementasi pada skripsi ini karena untuk saat ini \textit{bluetape} tidak terintegrasi dengan \textit{student/lecturer} portal. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/18}. 
-
-\subsection{Halaman Histori dan Request Transkrip Terpisah}
-\label{issue:19}
-\subsection{Fitur Bahasa Indonesia dan Inggris}
-\label{issue:20}
-Permintaan dari pengguna adalah fitur bahasa Indonesia dan bahasa Inggris. Setelah ditanyakan kejelasan dari permintaan ini, yang dimaksudkan pengguna adalah ``Jika dibutuhkan untuk transkrip nilai dalam bahasa Inggris, dulu ada pilihannya tetapi hasil transkrip tetap bahasa Indonesia''.
-
-Fitur ini tidak diimplementasi karena fitur transkrip nilai dalam bahasa Inggris yang awal diminta untuk dihapus oleh tata usaha. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/20}. 
 \subsection{Pagination tidak Ter-\textit{style} dengan Baik}
 \label{issue:22}
 \begin{figure}[H]
@@ -205,7 +139,7 @@ Fitur ini tidak diimplementasi karena fitur transkrip nilai dalam bahasa Inggris
 	\caption{Antarmuka \textit{pagination} pada halaman manajemen cetak transkrip}
 	\label{fig:paginationmanajemencetaktranskrip}
 \end{figure}
-Dapat dilihat pada gambar \ref{fig:paginationmanajemencetaktranskrip} \textit{bootstrap pagination} tidak ter-\textit{style} dengan baik. \textit{Feedback} dari pengguna adalah untuk memperbaiki \textit{pagination} tersebut dengan \textit{bootstrap pagination}.
+Dapat dilihat pada gambar \ref{fig:paginationmanajemencetaktranskrip} \textit{bootstrap pagination} tidak ter-\textit{style} dengan baik. Masukan dari pengurus \textit{bluetape} adalah untuk memperbaiki \textit{pagination} tersebut dengan \textit{bootstrap pagination}.
 
 Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan menggunakan struktur \textit{bootstrap pagination}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/22}. 
 
@@ -218,9 +152,87 @@ Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan menggunak
 	\label{fig:formatdatetimepicker}
 \end{figure}
 
-Halaman perubahan kuliah menggunakan \textit{datetimepicker}\footnote{\url{https://github.com/xdan/datetimepicker}}. Pengguna menyampaikan \textit{feedback} jika format \textit{datetimepicker} tidak konsisten. Dapat dilihat pada gambar \ref{fig:formatdatetimepicker} kolom dari hari \& jam memiliki format \texttt{YYYY/MM/DD hh:mm}. Sedangkan kolom menjadi hari \& jam memiliki format \texttt{YYYY-MM-DD hh:mm}.
+Halaman perubahan kuliah menggunakan \textit{datetimepicker}\footnote{\url{https://github.com/xdan/datetimepicker}}. Pengguna menyampaikan masukan jika format \textit{datetimepicker} tidak konsisten. Dapat dilihat pada gambar \ref{fig:formatdatetimepicker} kolom dari hari \& jam memiliki format \texttt{YYYY/MM/DD hh:mm}. Sedangkan kolom menjadi hari \& jam memiliki format \texttt{YYYY-MM-DD hh:mm}.
 
 Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan merubah format dari hari \& jam menjadi \texttt{YYYY-MM-DD hh:mm}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/23}.
+
+\subsection{Mengubah atau Membatalkan Permohonan}
+\label{issue:11}
+Pada halaman cetak transkrip dan halaman  perubahan kuliah pengguna dapat mengajukan permohonan. Salah satu mahasiswa dan dosen menyampaikan masukan yaitu:
+\begin{itemize}
+	\item Mahasiswa dapat mengubah atau membatalkan permohonan transkrip. 
+	\item Dosen dapat mengubah atau membatalkan permohonan perubahan kuliah.
+\end{itemize}
+Karena fitur ini mirip maka dijadikan satu subbagian. 
+
+Fitur ini akan diimplementasi dan solusi yang ditawarkan adalah dengan menggunakan \texttt{modal} dari \textit{bootstrap} dan menambahkan \textit{method} pada \textit{controller} untuk mengubah dan menghapus dengan syarat bahwa permohonan tersebut belum dijawab. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/11}.
+
+
+Masukan ini akan diimplementasi dan solusi yang ditawarkan adalah dengan menambah satu kolom \textit{text input} untuk menerima jam selesai dalam format \texttt{hh:mm} dan kolom tersebut bersifat opsional untuk diisi oleh dosen. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/12}.
+
+\subsection{Halaman Histori dan Request Transkrip Terpisah}
+\label{issue:19}
+Masukkan ini diajukan oleh mahasiswa agar halaman histori dan pengajuan cetak transkrip dipisah menjadi dua halaman berbeda. 
+
+Masukan ini akan diimplementasi dan solusi yang ditawarkan adalah memindahkan kolom pengajuan cetak transkrip menjadi \textit{modal}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/19}.
+
+\subsection{Menyediakan Forum Q\&A pada \textit{Bluetape}}
+\label{issue:9}
+Masukan dari tatausaha meminta agar \textit{bluetape} menyediakan tempat forum untuk bertanya antar mahasiswa dan pihak tata usaha. Masukan dari pengguna: ``Pada masa daring saat ini ketika semua informasi disampaikan melalui media digital, mahasiswa banyak kontak via email dan akhirnya menumpuk''.  Pengguna meminta untuk dibuat portal kecil untuk \textit{Q}\&\textit{A} dalam ranah akademik.
+
+Masukan ini tidak akan diimplementasi pada skripsi ini, karena untuk forum sebaiknya menggunakan aplikasi pihak ketiga yang sudah matang dibanding membuat dari nol. Seperti: \textit{Microsoft Teams}\footnote{\url{https://www.microsoft.com/microsoft-365/microsoft-teams}},\textit{Slack}\footnote{\url{https://slack.com}} atau \textit{monday.com}\footnote{\url{https://monday.com/}}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/9}. 
+
+\subsection{\textit{Scheduling} Matakuliah pada \textit{googlemeet/zoom}}
+\label{issue:10}
+Masukan ini diajukan oleh dosen dan meminta agar \textit{bluetape} melakukan \textit{auto include} jadwal kuliah ke calendar, lalu {autocreate} jadwal kuliah berdasarkan jadwal tersebut di \textit{zoom/meet} selama 1 semester, dan \textit{Request} jadwal bertemu dari mahasiswa kepada dosen pembimbing, kemudian \textit{auto schedule zoom/meet}.
+
+Fitur ini tidak akan diimplementasi pada skripsi ini, karena permintaan tersebut masuk ke dalam ranah Biro Teknologi Informasi (BTI) dan saat ini \textit{bluetape} tidak memiliki kemampuan untuk integrasi jadwal kuliah dari BTI. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/10}. 
+
+
+\subsection{Memperbaiki \textit{Form} dan \textit{Link} yang Tidak Aktif}
+\label{issue:13}
+Masukan ini diajukan oleh dosen dan meminta perbaikan terhadap fitur yang ada: 
+\begin{itemize}
+	\item \textit{form} atau link seperti no surat, daftar ruang, dan peraturan terus diupdate.
+	\item Dibuat lebih sistematis karena tampilannya tidak seragam.
+	\item Dibuat lebih interaktif seperti peminjaman ruang.
+\end{itemize}   
+
+Masukan ini tidak akan diimplementasi, karena sepertinya fitur tersebut di luar sistem \textit{bluetape}. Seperti no surat, daftar ruang, dan peraturan tidak terdapat pada \textit{bluetape}. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/13}. 
+
+\subsection{Pengelompokkan Rekap Perubahan Jadwal pada Mata Kuliah yang Sama}
+\label{issue:8}
+
+\subsection{Mengintegrasi \textit{Bluetape} dengan SSO UNPAR}
+\label{issue:14}
+Masukan ini diajukan oleh mahasiswa dan meminta fitur tambahan agar \textit{bluetape} terintegrasi secara penuh dengan \textit{studentportal}\footnote{\url{https://studentportal.unpar.ac.id/}}. Sehingga \textit{bluetape} dapat diakses lewat \textit{studentportal} dan \textit{bluetape} dapat \textit{login} menggunakan SSO.
+
+Fitur masukan ini tidak akan diimplementasi karena diperlukan koordinasi yang kuat dengan BTI dan \textit{Bluetape} untuk sekarang ini tidak diperuntukan untuk pengguna diluar FTIS. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/14}. 
+
+\subsection{Menambah \textit{List} Permintaan pada \textit{Bluetape}}
+\label{issue:15}
+Masukan ini meminta agar \textit{bluetape} menambah \textit{list} permintaan. Masukan ini tidak dikerjakan karena pengguna tersebut kurang spesifik dalam menjelaskan kebutuhannya. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/15}. 
+
+\subsection{Pengajuan Surat Keterangan Aktif Kuliah Secara Online}
+\label{issue:16}
+Fitur tambahan ini diajukan oleh mahasiswa dan meminta agar \textit{bluetape} dapat melayani pengajuan surat keterangan aktif kuliah. Karena untuk mendapatkan surat keterangan aktif kuliah masih dilakukan secara manual.
+
+Fitur ini tidak akan diimplementasi pada skripsi ini dikarenakan waktu yang terbatas, fitur yang cukup banyak, dan juga harus koordinasi intensif dengan tata usaha dan kepala sub bagian kemahasiswaan. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/16}.
+ 
+
+\subsection{Dapat Melihat Profil Mahasiswa}
+
+\label{issue:18}
+Salah satu masukan dari mahasiswa untuk \textit{bluetape} adalah menginginkan seorang mahasiswa dapat melihat profil mahasiswa lain.
+
+Fitur ini tidak diimplementasi pada skripsi ini karena untuk saat ini \textit{bluetape} tidak terintegrasi dengan \textit{student/lecturer} portal. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/18}. 
+
+
+\subsection{Fitur Bahasa Indonesia dan Inggris}
+\label{issue:20}
+Permintaan ini diajukan oleh mahasiswa agar tersedia fitur bahasa Indonesia dan bahasa Inggris. Setelah ditanyakan kejelasan dari permintaan ini, yang dimaksudkan pengguna adalah ``Jika dibutuhkan untuk transkrip nilai dalam bahasa Inggris, dulu ada pilihannya tetapi hasil transkrip tetap bahasa Indonesia''.
+
+Fitur ini tidak diimplementasi karena fitur transkrip nilai dalam bahasa Inggris yang awal diminta untuk dihapus oleh tata usaha. Alamat \textit{issue} pada \textit{github}: \url{https://github.com/stephenhadi/BlueTape/issues/20}. 
 
 \section{Bluetape}
 
