--- a/doc/DokumenSkripsi/Bab/bab1.tex
+++ b/doc/DokumenSkripsi/Bab/bab1.tex
@@ -4,10 +4,17 @@
    
 \section{Latar Belakang}
 \label{sec:label}
- Berkembangnya FTIS UNPAR disertai dengan tersedianya semakin banyak matakuliah, dari perkembangan tersebut muncul permasalahan baru di bagian bidang administrasi. Jika dosen ingin meniadakan perkuliahan atau mengganti perkuliahan akan tidak efisien jika melakukan panggilan atau \textit{email} ke pihak tata usaha. Hal tersebut akan memberatkan pihak tata usaha. Mahasiswa yang ingin melakukan pengajuan transkrip akan membuang waktu dan tenaga, karena saat mahasiswa ingin melakukan pengajuan transkrip maka mahasiswa harus datang ke tata usaha melakukan pengajuan dan menunggu beberapa hari untuk mendapatkan hasil transkrip tersebut. Mahasiswa yang tidak memiliki perkuliahan pada hari tersebut harus datang hanya untuk melakukan pengajuan. Hal ini selain membuang waktu juga membuang biaya transportasi.
+ Berkembangnya FTIS UNPAR disertai dengan tersedianya semakin banyak matakuliah, dari perkembangan tersebut muncul permasalahan baru di bagian bidang administrasi. Jika dosen ingin meniadakan perkuliahan atau mengganti perkuliahan akan tidak efisien jika melakukan panggilan atau \textit{email} ke pihak tata usaha. Hal tersebut akan memberatkan pihak tata usaha. Mahasiswa yang ingin melakukan pengajuan transkrip akan membuang waktu dan tenaga, karena saat mahasiswa ingin melakukan pengajuan transkrip maka mahasiswa harus datang ke tata usaha melakukan pengajuan dan menunggu beberapa hari untuk mendapatkan hasil transkrip tersebut. Mahasiswa yang tidak memiliki perkuliahan pada hari tersebut harus datang hanya untuk melakukan pengajuan. Hal ini selain membuang waktu juga membuang biaya transportasi. Aplikasi \textit{Bluetape} hanya dapat diakses menggunakan e-mail dengan \textit{sub-domain unpar.ac.id}. Aplikasi ini mempermudah pertukaran informasi pada lingkungan FTIS UNPAR dengan tersedianya fitur sebagai berikut:
+ \begin{itemize}
+ 	\item Pengajuan cetak transkrip
+ 	\item Mengelola permintaan cetak transkrip
+ 	\item Pengajuan perubahan waktu kuliah
+ 	\item Mengelola permintaan perubahan waktu kuliah
+ 	\item Memasukkan jadwal dosen
+ 	\item Melihat jadwal dosen
+ \end{itemize}
 
-
-\textit{Bluetape}\footnote{\label{ft:bluetape}\url{https://github.com/ftisunpar/BlueTape}} adalah aplikasi web yang dibuat oleh dosen dan mahasiswa informatika. Aplikasi ini dibuat menggunakan \textit{Hypertext Preprocessor} atau lebih dikenal dengan \textit{PHP}\footnote{\url{https://www.php.net/}}. \textit{Database management system} atau DBMS yang digunakan adalah \textit{MYSQL}\footnote{\url{https://www.mysql.com/}}.\textit{ Bluetape} menggunakan \textit{framework Bootstrap}\footnote{\url{https://getbootstrap.com/}} dan \textit{Codeigniter}\footnote{\url{https://codeigniter.com/}}. \textit{Bluetape} berguna untuk membantu kegiatan administrasi FTIS UNPAR. Aplikasi ini dapat melakukan \textit{transkrip request/manage} dan \textit{request perubahan kuliah/manage}. Sehingga jika dosen ingin meniadakan/mengganti perkuliahan dapat dilakukan dengan mudah tanpa harus membuat email ataupun melakukan panggilan. Mahasiswa dapat melakukan permintaan transkrip nilai tanpa tatap muka sehingga mahasiswa hanya perlu datang ke UNPAR saat ingin mengambil hasil dari transkrip tersebut, selain itu mahasiswa juga dapat melihat jadwal dosen. Dengan adanya sistem otomasi pada kegiatan administrasi tentunya pekerjaan tata usaha menjadi lebih ringan. 
+Aplikasi ini dibuat menggunakan \textit{Hypertext Preprocessor} atau lebih dikenal dengan \textit{PHP}. \textit{Database management system} atau DBMS yang digunakan adalah \textit{MYSQL}. \textit{ Bluetape} menggunakan \textit{framework Bootstrap} dan \textit{Codeigniter}. \textit{Bluetape} berguna untuk membantu kegiatan administrasi FTIS UNPAR. Tersedianya fitur \textit{transkrip request/manage} dan \textit{request perubahan kuliah/manage}, jika dosen ingin meniadakan/mengganti perkuliahan dapat dilakukan dengan mudah tanpa harus membuat email ataupun melakukan panggilan. Mahasiswa dapat melakukan permintaan transkrip nilai tanpa tatap muka sehingga mahasiswa hanya perlu datang ke UNPAR saat ingin mengambil hasil dari transkrip tersebut, selain itu mahasiswa juga dapat melihat jadwal dosen. Dengan adanya sistem otomasi pada kegiatan administrasi tentunya pekerjaan tata usaha menjadi lebih ringan. Saat ini Bluetape hanya dapat diakses oleh mahasiswa FTIS, tata usaha dan dosen informatika.  
 
 
 Aplikasi \textit{Bluetape} digunakan oleh mahasiswa FTIS, dosen ,dan tata usaha. Dari pengguna--pengguna tersebut tentu akan ada hal yang disukai dan hal yang tidak disukai. Seperti ada fitur yang bermasalah, ada fitur yang kurang atau hanya saran untuk fitur kedepannya yang akan memudahkan kegiatan administrasi dalam FTIS UNPAR. Dengan adanya masukan--masukan dari pengguna maka aplikasi \textit{Bluetape} dapat ditingkatkan penggunaannya dan memperbaiki kelemahan dari \textit{Bluetape}.
@@ -15,15 +22,16 @@ Aplikasi \textit{Bluetape} digunakan oleh mahasiswa FTIS, dosen ,dan tata usaha.
 Pada topik skripsi ini akan dilakukan analisis untuk perbaikan dan penambahan fitur untuk aplikasi \textit{Bluetape}, penambahan fitur akan disurvei kepada semua pengguna \textit{Bluetape}. Pengguna yang akan disurvei tidak semua. Hanya perwakilan--perwakilan dari pihak dosen, tata usaha, dan mahasiswa. Selanjutnya akan dianalisa bersama pembimbing untuk menentukan fitur yang akan dirancang dan diimplementasi. Survei tidak terbatas hanya pada fitur tambahan, fitur--fitur yang tidak menghasilkan sesuai kegunaannya akan diperbaiki juga.
 
 
-Sebelum melakukan perancangan dan implementasi diperlukan untuk \textit{setup} aplikasi \textit{Bluetape} pada komputer sendiri dan ada persyaratan yang harus dipenuhi yaitu mendaftarkan diri ke \textit{google OAuth 2.0} diakrenakan \textit{login} pada \textit{Bluetape} menggunakan akun \textit{gmail} UNPAR. Selanjutnya juga akan dipelajari \textit{framework CodeIgniter dan Bootstrap} yang menjadi dasar dari aplikasi ini. 
+Sebelum melakukan perancangan dan implementasi diperlukan untuk \textit{setup} aplikasi \textit{Bluetape} pada komputer sendiri dan ada persyaratan yang harus dipenuhi yaitu mendaftarkan diri ke \textit{google OAuth 2.0} dikarenakan \textit{login} pada \textit{Bluetape} menggunakan \textit{API} dari \textit{gmail}. Selanjutnya juga akan dipelajari \textit{framework CodeIgniter dan Bootstrap} yang menjadi dasar dari aplikasi ini. 
 
 \section{Rumusan Masalah}
 \label{sec:rumusan}
 Rumusan masalah yang telah diidentifikasi sebagai berikut:
 \begin{enumerate}
 	\item Apa sajakah kebutuhan yang diinginkan oleh pengguna bluetape?
-	\item Bagaimana menganalisa, merancang, dan mengimplementasi \textit{feedback--feedback} dari pengguna?
-	\item Bagaimana melakukan pengujian setelah mengimplementasi \textit{feedback--feedback} dari pengguna?
+	\item Bagaimana melakukan survei untuk mendapatkan masukan dari pengguna?
+	\item Bagaimana menganalisa, merancang, dan mengimplementasi masukan dari pengguna?
+	\item Bagaimana melakukan pengujian setelah mengimplementasi masukan dari pengguna?
 
 \end{enumerate}
 
@@ -31,9 +39,10 @@ Rumusan masalah yang telah diidentifikasi sebagai berikut:
 \label{sec:tujuan}
 Tujuan pembuatan dan penulisan skripsi ini adalah sebagai berikut:
 \begin{enumerate}
-	\item Mendapatkan \textit{feedback--feedback} dari pengguna terkait kebutuhan yang diinginkan.
-	\item Menganalisa, merancang, dan mengimplementasi \textit{feedback--feedback} dari pengguna
-	\item Melakukan pengujian setelah mengimplementasi semua \textit{feedback} yang memungkinkan untuk diimplementasi
+	\item Mendapatkan masukan dari pengguna untuk kebutuhan yang diinginkan.
+	\item Menentukan metode survei.
+	\item Menganalisa, merancang, dan mengimplementasi masukan dari pengguna
+	\item Melakukan pengujian setelah mengimplementasi masukan yang memungkinkan untuk diimplementasi
 
 \end{enumerate}
 
